# mirte-ros-packages

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  1-local.list  CMakeLists.txt  FUTURE.md  LICENSE  Packages  README.md  Release  local.yaml  package.xml  ros-humble-mirte-base-control-dbgsym_2-2024.12.11.13.33_amd64.ddeb  ros-humble-mirte-base-control-dbgsym_2-2024.12.11.13.55_arm64.ddeb  ros-humble-mirte-base-control_2-2024.12.11.13.33_amd64-2024-12-11T13:33:58Z.build  ros-humble-mirte-base-control_2-2024.12.11.13.33_amd64.build  ros-humble-mirte-base-control_2-2024.12.11.13.33_amd64.buildinfo  ros-humble-mirte-base-control_2-2024.12.11.13.33_amd64.changes  ros-humble-mirte-base-control_2-2024.12.11.13.33_amd64.deb  ros-humble-mirte-base-control_2-2024.12.11.13.55_arm64-2024-12-11T13:55:49Z.build  ros-humble-mirte-base-control_2-2024.12.11.13.55_arm64.build  ros-humble-mirte-base-control_2-2024.12.11.13.55_arm64.buildinfo  ros-humble-mirte-base-control_2-2024.12.11.13.55_arm64.changes  ros-humble-mirte-base-control_2-2024.12.11.13.55_arm64.deb  ros-humble-mirte-bringup_2-2024.12.11.13.31_amd64-2024-12-11T13:31:42Z.build  ros-humble-mirte-bringup_2-2024.12.11.13.31_amd64.build  ros-humble-mirte-bringup_2-2024.12.11.13.31_amd64.buildinfo  ros-humble-mirte-bringup_2-2024.12.11.13.31_amd64.changes  ros-humble-mirte-bringup_2-2024.12.11.13.31_amd64.deb  ros-humble-mirte-bringup_2-2024.12.11.13.34_arm64-2024-12-11T13:34:08Z.build  ros-humble-mirte-bringup_2-2024.12.11.13.34_arm64.build  ros-humble-mirte-bringup_2-2024.12.11.13.34_arm64.buildinfo  ros-humble-mirte-bringup_2-2024.12.11.13.34_arm64.changes  ros-humble-mirte-bringup_2-2024.12.11.13.34_arm64.deb  ros-humble-mirte-control-dbgsym_2-2024.12.11.13.35_amd64.ddeb  ros-humble-mirte-control-dbgsym_2-2024.12.11.14.04_arm64.ddeb  ros-humble-mirte-control_2-2024.12.11.13.35_amd64-2024-12-11T13:35:17Z.build  ros-humble-mirte-control_2-2024.12.11.13.35_amd64.build  ros-humble-mirte-control_2-2024.12.11.13.35_amd64.buildinfo  (+51 more)
mirte_base_control/: CMakeLists.txt  mirte_base_control.xml  package.xml
mirte_base_control/bringup/config/: diffbot_controllers.yaml  mirte_base_control.yaml
mirte_base_control/bringup/launch/: mirte_base.launch.py
mirte_base_control/bringup/urdf/: base.urdf.xacro
mirte_base_control/config/: control_master.yaml  my_robot_common.yaml
mirte_base_control/hardware/: mirte_base_control.cpp  params.cpp
mirte_base_control/hardware/include/: mirte_base_control.hpp  params.hpp
mirte_base_control/include/: mirte_base_control.hpp  my_robot_hw_interface.h
mirte_base_control/src/: mirte_base_control.cpp  my_robot_base.cpp
mirte_control/: CMakeLists.txt  mirte_control.xml  package.xml
mirte_control/bringup/config/: diffbot_controllers.yaml  mirte_diff_drive_controllers.yaml
mirte_control/bringup/launch/: diffbot.launch.py  mirte.launch.py
mirte_control/description/launch/: view_robot.launch.py
mirte_control/description/ros2_control/: diffbot.ros2_control.xacro
mirte_control/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
mirte_control/hardware/: diffbot_system.cpp  mirte_pioneer_system.cpp
mirte_control/hardware/include/mirte_control/: diffbot_system.hpp  mirte_pioneer_system.hpp  visibility_control.h
mirte_control/include/: my_robot_hw_interface.h
mirte_description/mirte_pioneer_description/: CMakeLists.txt  package.xml
mirte_description/mirte_pioneer_description/launch/: rviz.launch.xml
mirte_description/mirte_pioneer_description/urdf/mirte/: lidar.xacro  macros.xacro  mirte.xacro  realsense-depth.xacro  realsense.xacro
mirte_msgs/: CMakeLists.txt  package.xml
mirte_msgs/msg/: Color.msg  ColorHSL.msg  ColorHSLStamped.msg  ColorRGBAStamped.msg  ColorRGBW.msg  ColorRGBWStamped.msg  ColorStamped.msg  Encoder.msg  Intensity.msg  IntensityDigital.msg  Keypad.msg  ServoPosition.msg  SetSpeedNamed.msg  color.msg
mirte_msgs/srv/: GetAnalogPinValue.srv  GetBoardCharacteristics.srv  GetColor.srv  GetColorHSL.srv  GetColorRGBA.srv  GetColorRGBW.srv  GetDigitalPinValue.srv  GetIntensity.srv  GetPinValue.srv  GetRange.srv  SetDigitalPinValue.srv  SetOLEDImage.srv  SetPWMPinValue.srv  SetServoAngle.srv  SetServoAngleWithSpeed.srv  SetSpeedMultiple.srv
mirte_telemetrix_cpp/: CMakeLists.txt  FUTURE.md  package.xml
mirte_telemetrix_cpp/config/: mirte_nano_config.yaml  mirte_pcb08_config.yaml  mirte_raw_pins_config.yaml  mirte_user_config.yaml
mirte_telemetrix_cpp/config/old/: mirte_pcb02_config.yaml
mirte_telemetrix_cpp/include/mirte_telemetrix_cpp/: device.hpp  gpio_pin.hpp  mirte-actuators.hpp  mirte-board.hpp  mirte-modules.hpp  mirte-sensors.hpp  mirte-telemetrix.hpp  util.hpp
mirte_telemetrix_cpp/include/mirte_telemetrix_cpp/actuators/: motor.hpp  servo_base.hpp
mirte_telemetrix_cpp/include/mirte_telemetrix_cpp/modules/: adxl345_module.hpp  base_module.hpp  hiwonder_module.hpp  ina226_module.hpp  mpu9250_module.hpp  pca_module.hpp  ssd1306_module.hpp  veml6040_module.hpp
mirte_telemetrix_cpp/include/mirte_telemetrix_cpp/parsers/: device_data.hpp  parsers.hpp
mirte_telemetrix_cpp/include/mirte_telemetrix_cpp/pcbs/: v06.hpp  v08.hpp
mirte_telemetrix_cpp/include/mirte_telemetrix_cpp/sensors/: base_sensor.hpp  encoder_monitor.hpp  intensity_monitor.hpp  keypad_monitor.hpp  sonar_monitor.hpp
mirte_telemetrix_cpp/src/: device.cpp  gpio_pin.cpp  mirte-actuators.cpp  mirte-board.cpp  mirte-modules.cpp  mirte-sensors.cpp  mirte-telemetrix.cpp  test.cpp  util.cpp
mirte_telemetrix_cpp/src/actuators/: motor.cpp  servo_base.cpp
mirte_telemetrix_cpp/src/actuators/motor/: ddp_motor.cpp  dp_motor.cpp  (+1 more)
mirte_telemetrix_cpp/src/boards/: atmega328.cpp  pcb.cpp  pico.cpp
mirte_telemetrix_cpp/src/modules/: adxl345_module.cpp  base_module.cpp  hiwonder_module.cpp  ina226_module.cpp  mpu9250_module.cpp  pca_module.cpp  ssd1306_module.cpp  veml6040_module.cpp
mirte_telemetrix_cpp/src/parsers/: device_data.cpp  parsers.cpp
mirte_telemetrix_cpp/src/sensors/: base_sensor.cpp  encoder_monitor.cpp  intensity_monitor.cpp  keypad_monitor.cpp  sonar_monitor.cpp
(+318 files in other folders)
