<?xml version="1.0"?>
<package format="2">
<name>tmx-cpp</name>
  <version>0.0.1</version>
  <description>Telemetrix cpp implementation</description>
  <maintainer email="tmxcpp@arend-jan.com">Arend-Jan van Hilten</maintainer> 
  <license>AGPL</license>

 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>mirte_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mirte_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>boost</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
