<?xml version="1.0"?>
<package format="2">
<name>tmx-cpp</name>
  <version>0.0.1</version>
  <description>Telemetrix cpp implementation</description>
  <maintainer email="tmxcpp@arend-jan.com">Arend-Jan van Hilten</maintainer> 
  <license>AGPL</license>
  <depend>boost</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mirte_msgs</exec_depend>

  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export> -->

</package>
