<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>mirte_telemetrix_cpp</name>
  <version>0.0.1</version>
  <description>Telemetrix cpp implementation</description>
  <maintainer email="tmxcpp@arend-jan.com">Arend-Jan van Hilten</maintainer> 
  <license>AGPL</license>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>boost</depend>
  <depend>std_msgs</depend>
  <depend>mirte_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>backward_ros</depend>
  <depend>ament_index_cpp</depend>
  <depend>color_util</depend>
  <depend>std_srvs</depend>
  <build_depend condition="$MIRTE_TYPE == 'mirte-master'">libgpiod-dev</build_depend>

  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_pycodestyle</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
